// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should show arrows with correct colors when enabled (at the top) 1`] = `
"▲
●  1. Item 1
   2. Item 2
   3. Item 3
▼"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should show arrows with correct colors when scrolled to the end 1`] = `
"▲
   1. Item 1
   2. Item 2
   3. Item 3
▼"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should show arrows with correct colors when scrolled to the middle 1`] = `
"▲
   1. Item 1
   2. Item 2
   3. Item 3
▼"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should show both arrows dimmed when list fits entirely 1`] = `
"▲
● 1. Item A
  2. Item B
  3. Item C
▼"
`;
